deploy: b7e9a922787513bd3022807af135a3757e1b721e

--- a/series/index.html
+++ b/series/index.html
@@ -1,17 +1,16 @@
 <!doctype html><html lang=en>
 <head>
-<meta name=generator content="Hugo 0.92.0">
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="ie=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=author content="Stijn Van Campenhout ">
-<meta name=description content="Braindumps.">
+<meta name=description content>
 <meta name=keywords content>
 <meta name=robots content="noodp">
 <meta name=theme-color content>
-<link rel=canonical href=https://blog.subutux.be/>
+<link rel=canonical href=https://blog.subutux.be/series/>
 <title>
-Subutux — A collection of braindumps.
+Series :: Subutux — A collection of braindumps.
 </title>
 <link href=https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css rel=stylesheet type=text/css>
 <link rel=stylesheet href=https://blog.subutux.be/main.17863a81d979b637a02cd7632a4d86e9d80563ef460fd6af1a56962efcaa066b.css>
@@ -23,17 +22,17 @@ Subutux — A collection of braindumps.
 <link rel="shortcut icon" href=https://blog.subutux.be/favicon.ico>
 <meta name=msapplication-TileColor content>
 <meta name=theme-color content>
-<meta itemprop=name content="Subutux">
+<meta itemprop=name content="Series">
 <meta itemprop=description content="Braindumps.">
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://blog.subutux.be/">
-<meta name=twitter:title content="Subutux">
+<meta name=twitter:title content="Series">
 <meta name=twitter:description content="Braindumps.">
-<meta property="og:title" content="Subutux">
+<meta property="og:title" content="Series">
 <meta property="og:description" content="Braindumps.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://blog.subutux.be/"><meta property="og:image" content="https://blog.subutux.be/"><meta property="og:site_name" content="Subutux">
-<link rel=alternate type=application/rss+xml href=https://blog.subutux.be/index.xml title=Subutux>
+<meta property="og:url" content="https://blog.subutux.be/series/"><meta property="og:image" content="https://blog.subutux.be/"><meta property="og:site_name" content="Subutux">
+<link rel=alternate type=application/rss+xml href=https://blog.subutux.be/series/index.xml title=Subutux>
 </head>
 <body>
 <div class=container>
@@ -59,12 +58,10 @@ Subutux — A collection of braindumps.
 </span>
 </header>
 <div class=content>
-<main aria-role=main>
-<div>
-<h1>Subutux</h1>
-<p>Braindumps.</p>
-<div>
-&nbsp; <a href=https://github.com/subutux/ target=_blank rel=noopener title=Github><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg></a> &nbsp;&nbsp; <a href=https://www.linkedin.com/in/stijn-van-campenhout-5a009733/ target=_blank rel=noopener title=Linkedin><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg></a> &nbsp;&nbsp; <a href=mailto:hey@subutux.be target=_blank rel=noopener title=Email><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1.0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1.0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg></a> &nbsp;&nbsp; <a href=https://blog.subutux.be/index.xml target=_blank rel=noopener title=Rss></a> &nbsp;
+<main class=posts>
+<h1>Series</h1>
+<div class=pagination>
+<div class=pagination__buttons>
 </div>
 </div>
 </main>
